# fastapi_webinar

./: .readthedocs.yml  README.md  pyproject.toml
docs/: conf.py  index.md
docs/01_new_project/: index.md  pyproject.toml
docs/02_skip_browser/: conftest.py  index.md  test_main.py
docs/03_heroes/: index.md  main.py  models.py  test_main.py
docs/04_database/: conftest.py  heroes.js  index.md  main.py  models.py  test_main.http  test_main.py
docs/05_frontends/: index.md
