[tool.poetry]
name = "fastapi_webinar"
version = "0.1.0"
description = ""
authors = ["Paul Everitt <pauleveritt@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.2.0"
furo = "^2021.10.9"
myst-parser = "^0.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
