[tool.poetry]
name = "fastapi_webinar"
version = "0.1.0"
description = ""
authors = ["Paul Everitt <pauleveritt@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
Sphinx = { version = "^4.2.0", optional = true }
furo = { version = "^2021.10.9", optional = true }
myst-parser = { version = "^0.15.2", optional = true }

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "hypothesis", "tatsu", "importlib_resources", "lipsum"]
dev = ["bump2version", "tox"]
docs = ["sphinx", "furo", "myst-parser"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
